syntax = "proto3";

package pb;

service ProblemsStore {
    rpc FindById (ProblemRequest) returns (ProblemResponse) {}
    rpc FindAll (ProblemsRequest) returns (ProblemsResponse) {}
    rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse) {}
}

message ProblemRequest {
    string problemId = 1;
}

message ProblemResponse {
    Problem problem = 1;
    string err = 2;
}

message ProblemsRequest {}

message ProblemsResponse {
    string problems = 1;
    string err = 2;
}

message Problem {
    string id = 1;
    string title = 2;
    string description = 3;
    int64 timeLimit = 4;
    int32 level = 5;
}

message HealthCheckRequest {}

message HealthCheckResponse {
    bool up = 1;
    int32 problemCount = 2;
}